// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WizardStepLayout — content size detection > snapshot: large mode (contentHeight = 1200, overflow) 1`] = `
<div
  class="min-h-dvh flex flex-col"
>
  <header
    class="sticky top-0 z-20 bg-bg/95 backdrop-blur-md border-b border-border"
  >
    <div
      class="max-w-2xl mx-auto px-4"
    >
      <div
        class="h-14 flex items-center gap-3"
      >
        <button
          aria-label="Volver"
          class="flex items-center justify-center w-11 h-11 -ml-2 rounded-full hover:bg-surface-2 active:bg-surface-3 transition-colors shrink-0 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-[13px] text-text-mute font-medium truncate"
          >
            Nuevo torneo
             · Paso 
            3
             de 
            3
          </div>
        </div>
      </div>
      <div
        class="pb-3"
      >
        <div
          aria-label="Paso 3 de 3"
          aria-valuemax="3"
          aria-valuemin="1"
          aria-valuenow="3"
          class="h-1.5 bg-surface-3 rounded-full overflow-hidden"
          role="progressbar"
        >
          <div
            class="h-full rounded-full transition-all duration-500 ease-out motion-reduce:transition-none"
            style="width: 100%; background: linear-gradient(90deg, rgb(16, 185, 129), rgb(5, 150, 105));"
          />
        </div>
      </div>
    </div>
  </header>
  <main
    class="flex-1 overflow-auto pb-32"
  >
    <p>
      Contenido largo
    </p>
  </main>
  <footer
    class="sticky bottom-0 bg-bg/95 backdrop-blur-md border-t border-border pt-4 pb-[max(1rem,env(safe-area-inset-bottom))]"
  >
    <div
      class="max-w-2xl mx-auto px-4 space-y-1.5"
    >
      <button
        aria-busy="false"
        class="btn-primary w-full text-base py-3.5 disabled:opacity-40 disabled:cursor-not-allowed"
        type="button"
      >
        Continuar
      </button>
    </div>
  </footer>
</div>
`;

exports[`WizardStepLayout — content size detection > snapshot: medium mode (contentHeight = 500, ≤ 100% viewport - header/footer space) 1`] = `
<div
  class="min-h-dvh flex flex-col"
>
  <header
    class="sticky top-0 z-20 bg-bg/95 backdrop-blur-md border-b border-border"
  >
    <div
      class="max-w-2xl mx-auto px-4"
    >
      <div
        class="h-14 flex items-center gap-3"
      >
        <button
          aria-label="Volver"
          class="flex items-center justify-center w-11 h-11 -ml-2 rounded-full hover:bg-surface-2 active:bg-surface-3 transition-colors shrink-0 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-[13px] text-text-mute font-medium truncate"
          >
            Nuevo torneo
             · Paso 
            2
             de 
            3
          </div>
        </div>
      </div>
      <div
        class="pb-3"
      >
        <div
          aria-label="Paso 2 de 3"
          aria-valuemax="3"
          aria-valuemin="1"
          aria-valuenow="2"
          class="h-1.5 bg-surface-3 rounded-full overflow-hidden"
          role="progressbar"
        >
          <div
            class="h-full rounded-full transition-all duration-500 ease-out motion-reduce:transition-none"
            style="width: 67%; background: linear-gradient(90deg, rgb(16, 185, 129), rgb(5, 150, 105));"
          />
        </div>
      </div>
    </div>
  </header>
  <main
    class="flex-1"
  >
    <p>
      Contenido mediano
    </p>
  </main>
  <footer
    class="mt-6 pb-[max(1rem,env(safe-area-inset-bottom))]"
  >
    <div
      class="max-w-2xl mx-auto px-4 space-y-1.5"
    >
      <button
        aria-busy="false"
        class="btn-primary w-full text-base py-3.5 disabled:opacity-40 disabled:cursor-not-allowed"
        type="button"
      >
        Continuar
      </button>
    </div>
  </footer>
</div>
`;

exports[`WizardStepLayout — content size detection > snapshot: small mode (contentHeight = 200, ≤ 50% viewport) 1`] = `
<div
  class="min-h-dvh flex flex-col"
>
  <header
    class="sticky top-0 z-20 bg-bg/95 backdrop-blur-md border-b border-border"
  >
    <div
      class="max-w-2xl mx-auto px-4"
    >
      <div
        class="h-14 flex items-center gap-3"
      >
        <button
          aria-label="Volver"
          class="flex items-center justify-center w-11 h-11 -ml-2 rounded-full hover:bg-surface-2 active:bg-surface-3 transition-colors shrink-0 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-[13px] text-text-mute font-medium truncate"
          >
            Nuevo torneo
             · Paso 
            1
             de 
            3
          </div>
        </div>
      </div>
      <div
        class="pb-3"
      >
        <div
          aria-label="Paso 1 de 3"
          aria-valuemax="3"
          aria-valuemin="1"
          aria-valuenow="1"
          class="h-1.5 bg-surface-3 rounded-full overflow-hidden"
          role="progressbar"
        >
          <div
            class="h-full rounded-full transition-all duration-500 ease-out motion-reduce:transition-none"
            style="width: 33%; background: linear-gradient(90deg, rgb(16, 185, 129), rgb(5, 150, 105));"
          />
        </div>
      </div>
    </div>
  </header>
  <main
    class="flex-1 flex flex-col justify-center"
  >
    <p>
      Contenido pequeño
    </p>
  </main>
  <footer
    class="pb-[max(1rem,env(safe-area-inset-bottom))]"
  >
    <div
      class="max-w-2xl mx-auto px-4 space-y-1.5"
    >
      <button
        aria-busy="false"
        class="btn-primary w-full text-base py-3.5 disabled:opacity-40 disabled:cursor-not-allowed"
        type="button"
      >
        Continuar
      </button>
    </div>
  </footer>
</div>
`;
